--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,8 +8,11 @@
         android:enabled="true"
         android:title="Settings"
         android:visible="true" />
-
+    <item
+        android:id="@+id/group_chat"
+        android:title="Group Chat"/>
     <item
         android:id="@+id/Logout"
         android:title="Logout"/>
+
 </menu>
